--- a/index.html
+++ b/index.html
@@ -162,6 +162,14 @@
             </svg>
         );
 
+        const LogOut = () => (
+            <svg className="lucide" viewBox="0 0 24 24">
+                <path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"/>
+                <polyline points="16 17 21 12 16 7"/>
+                <line x1="21" x2="9" y1="12" y2="12"/>
+            </svg>
+        );
+
         // 採用者属性の定数
         const HIRING_ATTRIBUTES = [
           { value: 'experienced', label: '経験者' },
@@ -857,18 +865,6 @@
                       className="w-full border rounded-lg px-3 py-2"
                     />
                   </div>
-                  
-                  <div>
-                    <label className="block text-sm font-medium text-gray-700 mb-1">
-                      メモ・詳細情報
-                    </label>
-                    <textarea
-                      value={editData.notes}
-                      onChange={(e) => setEditData({ ...editData, notes: e.target.value })}
-                      className="w-full border rounded-lg px-3 py-2 h-32 resize-none"
-                      placeholder="候補者に関するメモや詳細情報を入力してください..."
-                    />
-                  </div>
 
                   {/* カスタムフィールド */}
                   <div className="border-t pt-4">
@@ -928,6 +924,18 @@
                         フィールド追加
                       </button>
                     </div>
+                  </div>
+                  
+                  <div>
+                    <label className="block text-sm font-medium text-gray-700 mb-1">
+                      メモ・詳細情報
+                    </label>
+                    <textarea
+                      value={editData.notes}
+                      onChange={(e) => setEditData({ ...editData, notes: e.target.value })}
+                      className="w-full border rounded-lg px-3 py-2 h-32 resize-none"
+                      placeholder="候補者に関するメモや詳細情報を入力してください..."
+                    />
                   </div>
 
                   {/* 日時情報 */}
@@ -1109,12 +1117,6 @@
                   </div>
                 </div>
               </div>
-
-              {candidate.notes && (
-                <div className="text-xs text-gray-600 mb-2 bg-gray-50 p-2 rounded max-h-16 overflow-y-auto">
-                  {candidate.notes.length > 50 ? `${candidate.notes.substring(0, 50)}...` : candidate.notes}
-                </div>
-              )}
 
               {candidate.customFields && candidate.customFields.length > 0 && (
                 <div className="text-xs text-gray-500 mb-2">
@@ -1630,13 +1632,15 @@
                                     navigationHistory={navigationHistory}
                                     onBack={handleBackNavigation}
                                 />
-                                <button
-                                    onClick={() => setShowPhaseManagement(true)}
-                                    className="flex items-center space-x-2 bg-gray-600 hover:bg-gray-700 text-white px-3 py-2 rounded-lg text-sm"
-                                >
-                                    <Settings />
-                                    <span>フェーズ管理</span>
-                                </button>
+                                <div className="flex items-center space-x-2">
+                                    <button
+                                        onClick={() => setShowPhaseManagement(true)}
+                                        className="flex items-center space-x-2 bg-gray-600 hover:bg-gray-700 text-white px-3 py-2 rounded-lg text-sm"
+                                    >
+                                        <Settings />
+                                        <span>フェーズ管理</span>
+                                    </button>
+                                </div>
                             </div>
                             <div>
                                 <h1 className="text-2xl font-bold text-gray-800">{selectedPosition.name}</h1>
@@ -1959,13 +1963,14 @@
             }
 
             return (
-                <div>
+                <div className="relative">
                     <div className="fixed top-4 right-4 z-40">
                         <button 
                             onClick={handleLogout}
-                            className="bg-red-500 hover:bg-red-600 text-white px-4 py-2 rounded text-sm shadow-lg"
+                            className="bg-red-500 hover:bg-red-600 text-white px-4 py-2 rounded text-sm shadow-lg flex items-center space-x-2"
                         >
-                            ログアウト
+                            <LogOut />
+                            <span>ログアウト</span>
                         </button>
                     </div>
                     <RecruitmentSystem />
